kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: langegpt
  labels:
    app: langegpt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: langegpt
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: langegpt
    spec:
      containers:
        - image: tantao89/langegpt
          name: langegpt
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 300m
              memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: langegpt
  name: langegpt
spec:
  ports:
    - name: langegpt
      port: 3002
      protocol: TCP
      targetPort: 3002
  selector:
    app: langegpt
  type: ClusterIP
